bug#8151 - truncate leaves a transaction open deadlock in MYSQL_LOG::new_file() style fixes